syntax = "proto3";

package lightops.service;

option csharp_namespace = "LightOps.Commerce.Proto.Services";

import "google/protobuf/wrappers.proto";
import "Protos/type/category.proto";

enum CategorySortKeyProto {
  DEFAULT = 0;
  TITLE = 1;
  CREATED_AT = 2;
  UPDATED_AT = 3;
}

service CategoryProtoService {
  // Gets a list of categories by handle
  rpc GetCategoriesByHandles(GetCategoriesByHandlesProtoRequest) returns (GetCategoriesByHandlesProtoResponse) {}

  // Gets a list of categories by ids
  rpc GetCategoriesByIds(GetCategoriesByIdsProtoRequest) returns (GetCategoriesByIdsProtoResponse) {}

  // Gets a list of paginated categories by search
  rpc GetCategoriesBySearch(GetCategoriesBySearchProtoRequest) returns (GetCategoriesBySearchProtoResponse) {}
}

// GetCategoriesByHandles request model
message GetCategoriesByHandlesProtoRequest {
  // The handles of the categories requested
  repeated string handles = 1;
}

// GetCategoriesByHandles response model
message GetCategoriesByHandlesProtoResponse {
  // The categories found, if any
  repeated lightops.type.CategoryProto categories = 1;
}

// GetCategoriesByIds request model
message GetCategoriesByIdsProtoRequest {
  // The ids of the categories requested
  repeated string ids = 1;
}

// GetCategoriesByIds response model
message GetCategoriesByIdsProtoResponse {
  // The categories found, if any
  repeated lightops.type.CategoryProto categories = 1;
}

// GetCategoriesBySearch, request model
message GetCategoriesBySearchProtoRequest {
  reserved 1;

  // The term to search for, if any
  google.protobuf.StringValue search_term = 7;

  // Search only in children with a specific parent id, if any specified. For no parent: 'gid://'
  google.protobuf.StringValue parent_id = 2;

  // The page cursor to use
  google.protobuf.StringValue page_cursor = 3;

  // The page size to use
  google.protobuf.Int32Value page_size = 4;

  // Sort the underlying list by the given key
  CategorySortKeyProto sort_key = 5;

  // Whether to reverse the order of the underlying list
  google.protobuf.BoolValue reverse = 6;
}

// GetCategoriesBySearch, response model
message GetCategoriesBySearchProtoResponse {
  reserved 1, 2;

  message CategoryResult {
    // The cursor of the result
    string cursor = 1;

    // The result node
    lightops.type.CategoryProto node = 2;
  }

  // The total amount of results available
  int32 total_results = 4;

  // Whether another page can be fetched
  bool has_next_page = 3;
  
  // Whether a previous page can be fetched
  bool has_previous_page = 5;

  // The cursor of the first result
  string start_cursor = 6;

  // The cursor of the last result
  string end_cursor = 7;

  // The categories found, if any
  repeated CategoryResult results = 8;
}
